<resources>
    <string name="app_name">Weather App</string>
    <string name="sunset">sunset</string>
    <string name="sunrise">sunrise</string>
    <string name="humidity">Humidity</string>
    <string name="sea">Sea</string>
    <string name="condition">condition</string>
    <string name="wind_speed">wind speed</string>
    <string name="sunny">Sunny</string>
    <string name="today">Today</string>
    <string name="min_temperature">Min Temp</string>
    <string name="max_temperature">Max Temp</string>
    <string name="no">--</string>
    <string name="temp">°C</string>
    <string name="percent">%</string>
    <string name="vellore">Vellore</string>
    <string name="sea_level">Sea Level</string>
</resources>