<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/r1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="750dp"
        android:background="@color/b1">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.widget.SearchView
                android:theme="@style/SearchViewStyle"
                android:id="@+id/search"
                android:closeIcon="@drawable/close_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:searchIcon="@drawable/search"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/background_shape"
                android:iconifiedByDefault="false"
                android:queryHint="Search for a city" />

            <TextView

                android:id="@+id/condition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:letterSpacing="0.1"
                android:text="@string/sunny"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/b1"
                android:textSize="20sp" />
        </LinearLayout>

        <ImageView
            android:layout_marginTop="20dp"
            android:id="@+id/imageView1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/layout1"
            android:layout_centerHorizontal="true"
            android:src="@drawable/cloud"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_below="@id/imageView1"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                android:textAlignment="center"
                android:textColor="@color/b1"
                android:textSize="70sp" />

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:text="@string/vellore"
                android:textSize="18sp"
                android:drawableTint="@color/b1"
                android:layout_marginTop="10dp"
                android:letterSpacing="0.1"
                android:textAlignment="center"
                android:textColor="@color/b1"
                app:drawableTopCompat="@drawable/location" />


        </LinearLayout>




        <LinearLayout
            android:layout_marginTop="20dp"
            android:background="@drawable/background_shape"
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:letterSpacing="0.1"
                    android:padding="20dp"
                    android:text="@string/humidity"
                    android:textColor="@color/b1"
                    android:textSize="18sp"
                    app:drawableEndCompat="@drawable/hum"
                    app:drawableTint="@color/b1"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="20dp"
                    android:text="@string/no"
                    android:textAlignment="center"
                    android:textColor="@color/b1"
                    tools:ignore="TextContrastCheck" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:letterSpacing="0.1"
                    android:padding="20dp"
                    android:text="@string/min_temperature"
                    android:textColor="@color/b1"
                    android:textSize="18sp"
                    app:drawableEndCompat="@drawable/tempdown"
                    app:drawableTint="@color/b1"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/minTemp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="20dp"
                    android:text="@string/no"
                    android:textAlignment="center"
                    android:textColor="@color/b1"
                    tools:ignore="TextContrastCheck" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:letterSpacing="0.1"
                    android:padding="20dp"
                    android:text="@string/max_temperature"
                    android:textColor="@color/b1"
                    android:textSize="18sp"
                    app:drawableEndCompat="@drawable/tempup"
                    app:drawableTint="@color/b1"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/maxTemp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="20dp"
                    android:text="@string/no"
                    android:textAlignment="center"
                    android:textColor="@color/b1"
                    tools:ignore="TextContrastCheck" />


            </LinearLayout>


            <LinearLayout
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sunrise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no"
                    android:textAlignment="center"
                    android:textColor="@color/b1"
                    app:drawableTint="@color/b1"
                    app:drawableTopCompat="@drawable/sunrise"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/sunset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no"
                    android:textAlignment="center"
                    android:textColor="@color/b1"
                    app:drawableTint="@color/b1"
                    app:drawableTopCompat="@drawable/sunset"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>


</ScrollView>